k8s/overlays/production/app-env-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  template:
    spec:
      containers:
        - name: app
          volumeMounts:
            - mountPath: /var/www/.env
              name: app-env
              subPath: .env
      volumes:
        - name: app-env
          configMap:
            name: app-env
            items:
              - key: .env.production
                path: .env
